packages/frontend/src/sass/layout/_topics.scss
.topics-menu {
    z-index: 11;
    position: relative;
    display: block;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 0px 104px;
    background: $background-color;
    width: 100%;
    border-top: solid lightgrey 1px;
    border-bottom: solid lightgrey 1px;

    .topic-buttons {
        display: flex;
        justify-content: center;
        text-align: center;
        align-items: center;
        padding-left: 50px 10px 50px 10px;
    }

    .topic {
        margin: 10px 30px;
        justify-content: center;
        align-items: center;
        cursor: pointer;
    }

    .topic:active {
        color: rgb(187, 187, 187);
        box-shadow: 4px 4px 4px 4px rgba(48, 48, 48, 0.5);
        border-radius: 5%;
    }

    .topic.selected {
        color: black;
        background-color: rgb(214, 214, 214);
        border-radius: 13%;
        text-decoration: underline;
    }
}

@media (max-width: 680px) {
    .topics-menu {
        display: grid;
        grid-template-columns: 1fr;

        .topic-buttons {
            display: grid;
            grid-template-columns: 1fr;

            > div {
                &:nth-child(n + 8) {
                    grid-column: 2;
                }
            }
        }
    }
}

